	- Update c_keywords.c to reflect changes in keywords.c.

Wed Jun 12 14:04:11 CEST 2002

	- Applied Lee Kindness' patch to fix one of memory allocation with
	  floating point numbers.
	
Mon Jun 17 15:23:51 CEST 2002

	- Fixed parser bug in pgc.l. Octal numbers in single quotes are now
	  correctly handled.

Tue Jun 18 15:13:15 CEST 2002

        - Fixed parser bug concerning foreign keys.
        - Synced preproc.y with gram.y.
        - Synced pgc.l with scan.l.
        - Synced keywords.c.
	
Sun Aug 18 16:09:06 CEST 2002

        - Synced preproc.y with gram.y.
        - Synced pgc.l with scan.l.
        - Synced keywords.c.

Tue Aug 20 14:13:34 CEST 2002

	- Removed ',' from preproc.y for bison 1.49b.

Sun Sep  1 11:13:04 CEST 2002

        - Synced preproc.y with gram.y.
        - Synced keywords.c.

Wed Sep 11 10:43:17 CEST 2002

	- Synced preproc.y with gram.y.


Fri Sep 20 07:57:42 CEST 2002

	- Synced preproc.y with gram.y.
	- Synced keywords.c.
	- Deactivated backend functions PREPARE, EXECUTE and DEALLOCATE for
	  the time being.

Thu Nov  7 10:34:07 CET 2002

	- Synced preproc.y with gram.y.
	- Set ecpg version to 2.10.0.
	- Set library version to 3.4.0.

Fri Nov 15 16:46:08 CET 2002

	- Synced preproc.y with gram.y.


Wed Nov 27 09:28:54 CET 2002

	- Synced preproc.y with gram.y.

Tue Jan 21 20:50:58 CET 2003

	- Set ecpg version to 2.11.0.
	- Synced preproc.y with gram.y.

Thu Feb 13 14:06:28 CET 2003

	- Applied patch by Matthew Vanecek <mevanecek@yahoo.com> for better
	  error reporting.
	- Started working on an Informix compatibility mode. With option "-C
	  INFORMIX" set, ecpg now accepts "$" as alias for "exec sql" and to
	  denote variables inside SQL statements.


Fri Feb 14 14:14:25 CET 2003

	- Synced parser and keyword file.
	- More work on Informix compatibility. 


Wed Feb 19 13:39:29 CET 2003

	- Added DATABASE command as alias to CONNECT TO.
	- Fixed struct parsing bug.
	- Set ecpg version to 2.12.0.
	- Set library to 3.4.2.
